# portalengine

./: LICENSE  README.md  pyproject.toml
examples/simplecrate/: main.py
examples/simplescene/: main.py
examples/simplescene/assets/objects/: tree.obj.json
src/portalengine/: __init__.py  camera.py  events.py  exceptions.py  game.py  player.py  scene.py  shaders.py  timetracker.py
src/portalengine/models/: __init__.py  compound.py  prefabricated.py  utils.py
tests/: test1.py
